--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ div{
 }
 
 @media screen and (min-width: 600px) and (max-width: 1100px) {
-  .hide{
+  .margin-left{
     margin-left: 100px;
   }
   .width{
